--- a/package.json
+++ b/package.json
@@ -1,5 +1,33 @@
 {
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "sass": "^1.63.6"
+    "@graphcms/rich-text-react-renderer": "^0.5.0",
+    "emailjs-com": "^3.2.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
+    "html-react-parser": "^1.4.10",
+    "moment": "^2.29.2",
+    "next": "^12.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.0",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.49.11",
+    "swiper": "^8.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.4",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwindcss": "^3.0.7",
+    "typescript": "4.5.4"
   }
 }
